# Pico-C

./: CMakeLists.txt  test.c  test.uf2
